--- a/products.html
+++ b/products.html
@@ -29,7 +29,9 @@
   <body>
     <header class="header">
       <div>
-        <img src="#" alt="logo" />
+        <a href="index.html" class="header logo">
+          <img src="img/logo.png" alt="logo" />
+        </a>
       </div>
       <nav class="header__nav">
         <ul class="header__list undoted">
@@ -47,7 +49,7 @@
       <form action="#" class="header__search">
         <input type="text" class="header__input" />
         <button class="header__btn">
-          <img src="#" alt="search" />
+          <img src="img/search.jpg" alt="search" class="btn-img" />
         </button>
       </form>
       <a href="#" class="header__button" target="_blank">Contact Us</a>
@@ -59,34 +61,58 @@
       <section class="products">
         <h2 class="products__heading">Category Products</h2>
         <nav class="breadcrumb">
-          <ul class="breadcrumb__list">
+          <ul class="breadcrumb__list undoted">
             <li class="breadcrumb__item">
               <a href="#" class="breadcrumb__link">Home</a>
             </li>
             <li class="breadcrumb__item">
-              <a href="#" class="breadcrumb__link">Catalog</a>
+              <a href="#" class="breadcrumb__link breadcrumb__active">
+                Catalog
+              </a>
             </li>
           </ul>
         </nav>
         <ul class="products__list undoted">
           <li class="products__item">
-            <a href="#" target="_blank" class="products__link">APPAREL KIDS</a>
+            <a href="#" target="_blank" class="products__link products__kids">
+              <div class="products__names products__long">
+                <p class="products__name">apparel</p>
+                <p class="products__name">kids</p>
+              </div>
+            </a>
           </li>
           <li class="products__item">
-            <a href="#" target="_blank" class="products__link">HOLIDAY SHOP</a>
+            <a
+              href="#"
+              target="_blank"
+              class="products__link products__holiday"
+            >
+              <div class="products__names products__long">
+                <p class="products__name">holiday</p>
+                <p class="products__name">shop</p>
+              </div>
+            </a>
           </li>
           <li class="products__item">
-            <a href="#" target="_blank" class="products__link">TOYS</a>
+            <a href="#" target="_blank" class="products__link products__toys">
+              <div class="products__names products__short">
+                <p class="products__name">accessories</p>
+              </div>
+            </a>
           </li>
           <li class="products__item">
-            <a href="#" target="_blank" class="products__link">ACCESSORIES</a>
+            <a href="#" target="_blank" class="products__link products__sale">
+              <div class="products__names products__short">
+                <p class="products__name">sale</p>
+              </div>
+            </a>
           </li>
           <li class="products__item">
-            <a href="#" target="_blank" class="products__link">SALE</a>
-          </li>
-          <li class="products__item">
-            <a href="#" target="_blank" class="products__link">
-              APPAREL ADULTS
+            <a href="#" target="_blank" class="products__link products__adults">
+              <div class="products__names products__long">
+                <p class="products__name">apparel</p>
+                <p class="products__name">adults</p>
+              </div>
             </a>
           </li>
         </ul>
@@ -146,7 +172,7 @@
           </ul>
         </div>
         <!-- /navigation -->
-        <div>
+        <div class="footer__customer">
           <h4 class="footer__title">Customer Information</h4>
           <ul class="footer__list undoted">
             <li class="footer__item">
@@ -178,7 +204,7 @@
           </ul>
         </div>
         <!-- /customer-footer -->
-        <div>
+        <div class="footer__connect">
           <h4 class="footer__title">Connect</h4>
           <form action="#" class="footer__form">
             <input type="text" placeholder="Email" class="footer__input" />
@@ -186,23 +212,43 @@
           </form>
           <ul class="footer__icons icons undoted">
             <li class="icons__item">
-              <a href="#" target="_blank" class="icons-link">
-                <img src="#" alt="facebook" class="icons-img" />
+              <a
+                href="https://www.facebook.com"
+                target="_blank"
+                class="icons-link"
+              >
+                <img src="img/Facebook.png" alt="facebook" class="icons-img" />
               </a>
             </li>
             <li class="icons__item">
-              <a href="#" target="_blank" class="icons-link">
-                <img src="#" alt="twitter" class="icons-img" />
+              <a href="https://twitter.com/" target="_blank" class="icons-link">
+                <img src="img/Twitter.png" alt="twitter" class="icons-img" />
               </a>
             </li>
             <li class="icons__item">
-              <a href="#" target="_blank" class="icons-link">
-                <img src="#" alt="Pinterest" class="icons-img" />
+              <a
+                href="https://www.pinterest.ru/"
+                target="_blank"
+                class="icons-link"
+              >
+                <img
+                  src="img/Pinterest.png"
+                  alt="Pinterest"
+                  class="icons-img"
+                />
               </a>
             </li>
             <li class="icons__item">
-              <a href="#" target="_blank" class="icons-link">
-                <img src="#" alt="Instagram" class="icons-img" />
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="icons-link"
+              >
+                <img
+                  src="img/Instagram.png"
+                  alt="Instagram"
+                  class="icons-img"
+                />
               </a>
             </li>
           </ul>
@@ -211,10 +257,14 @@
         <div class="footer__other">
           <p class="footer__text">Company Rating</p>
           <div class="footer__wrap-stars">
-            <img src="#" alt="stars" class="footer__stars" />
+            <img src="img/stars.png" alt="stars" class="footer__stars" />
           </div>
           <p class="footer__text">Copyright © 2018 Dlk • Design Life Kids</p>
-          <a href="#" target="_blank" class="footer__link-dl">
+          <a
+            href="https://directlinedev.com/"
+            target="_blank"
+            class="footer__link-dl"
+          >
             Web Design — Direct Line Development
           </a>
         </div>
