--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     />
   </head>
   <body>
-    <header class="header">
+    <header class="header conteiner">
       <div>
-        <a href="index.html" class="header logo">
+        <a href="index.html" class="logo header__logo">
           <img src="img/logo.png" alt="logo" />
         </a>
       </div>
@@ -40,13 +40,13 @@
           <img src="img/search.jpg" alt="search" class="btn-img" />
         </button>
       </form>
-      <a href="#" class="header__button" target="_blank">Contact Us</a>
+      <a href="#" class="header__button" target="_blank">contact us</a>
     </header>
     <!-- / header-->
 
     <!-- MAIN -->
     <main>
-      <section class="banner">
+      <section class="banner conteiner">
         <div class="banner__screen">
           <h1 class="banner__heading">THE OOH NOO COLLECTION</h1>
           <h3 class="banner__title">Designed in Slovenia</h3>
@@ -67,7 +67,7 @@
         <!-- <div class="banner__img"></div> -->
       </section>
       <!-- /banner -->
-      <section class="products">
+      <section class="products conteiner">
         <h2 class="products__heading">Category Products</h2>
         <ul class="products__list undoted">
           <li class="products__item">
@@ -120,7 +120,7 @@
         </p>
       </section>
       <!-- /products -->
-      <section class="delivery">
+      <section class="delivery conteiner">
         <div class="delivery__innerpic">
           <img
             src="img/foto_girl.jpg"
@@ -157,7 +157,7 @@
         </a>
       </section>
       <!-- /delivery -->
-      <section class="partners">
+      <section class="partners conteiner">
         <h2 class="partners__heading hidden">Our partners</h2>
         <ul class="partners__list undoted">
           <li class="partners__item">
@@ -195,7 +195,7 @@
         </ul>
       </section>
       <!-- /partners -->
-      <section class="info">
+      <section class="info conteiner">
         <div class="design">
           <h2 class="design__heading">Design Life Kids</h2>
           <h3 class="design__title">About Us</h3>
@@ -229,7 +229,7 @@
     <!-- /MAIN -->
 
     <footer class="footer">
-      <section class="footer__info">
+      <section class="footer__info conteiner">
         <div class="footer__navigation">
           <h4 class="footer__title">Navigation</h4>
           <ul class="footer__list undoted">
